2001-12-24  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02702] fix problem with emacs-w3m in [w3m-dev 02699]
	* main.c (MAIN): remove some flag initialization, its too early?
		this code caused problem with emacs-w3m.

2001-12-23  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02700] search refactoring
	* based on http://www.nmn.jp/~hidai/software/w3m/
	* fm.h: add SR_* constants, result value for search
	* main.c (srchcore): added
	* main.c (disp_srchresult): added
	* main.c (srch): added
	* main.c (srchfor): use srch()
	* main.c (srchbak): use srch()
	* main.c (srch_nxtprv): use srchcore() & disp_srch_result()
	* search.c (forwardSearch): return SR_* result value
	* search.c (backwardSearch): ditto

2001-12-23  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02699] initialization too late
	* main.c (MAIN): initializations moved before arg processing
	* debian bug closes: Bug##102445: ignores SIGWINCH while downloading

2001-12-22  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>

	* [w3m-dev 02696]
	* configure: fix bashism of w3mhelp-{lynx,w3m}_{en,ja} expansion

2001-12-22  Dai Sato <satodai@dog.intcul.tohoku.ac.jp>

	* [w3m-dev 02687] version number in w3mhelp-*.html (+[w3m-dev 02689])
	* configure (cur_ver): w3mhelp*.html version subst
	* w3mhelp*.html: deleted
	* w3mhelp*.html.in: added

2001-12-22  Tsutomu Okada <okada@furuno.co.jp>

	* [w3m-dev 02682]
	* doc/README: remove README.dj
	* doc-jp/README.hp: deleted

2001-12-22  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02692] w3m on linux/ia64
	* mktable.c: #include "config.h"
	* mktable.c: #include "stdint.h" or uintptr_t typedef
	* mktable.c: use uintptr_t instead of unsigned int
	* configure: check pthread on linux
	* configure: add gc_cflags for linux/ia64,alpha,s390
	* configure: check stdint.h
	* configure (config.h): add $pthreadlib to GCLIB
	* configure (config.h): add $def_have_stdint_h
	* config.h.dist (HAVE_STDINT_H): added
	* Str.c: add #include <stdlib.h> for exit() on some platform (ia64)
